--- a/Statistics/templates/statistics/Stats.html
+++ b/Statistics/templates/statistics/Stats.html
@@ -23,6 +23,8 @@
 
         gtag('config', 'G-2HEF8CQSG0');
     </script>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -41,7 +43,7 @@
                 <a href="#" class="card-link">Another link</a>
             </div>
         </div>
-        
+
         <div class="card" style="width: 100%; min-height: 200px ; margin: 0 auto">
             <div class="card-body">
                 <h5 class="card-title">Название карточки</h5>
