--- a/Statistics/templates/statistics/Stats.html
+++ b/Statistics/templates/statistics/Stats.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <title>Статистика</title>
-    <!--    <link rel="shortcut icon" href="" type="image/x-icon">-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@500&family=Gentium+Book+Plus&family=Prata&family=Source+Code+Pro:wght@500&display=swap"
+          rel="stylesheet">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -26,57 +29,50 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
+<body style="background: linear-gradient(to bottom, #5f7c8d 0%, #424a50 100%);">
 
-<div class="container col-12">
-    <h1>ПАО "Дружба"</h1>
-    <h2>банк дружбиков третьего потока</h2>
+<div class="container col-12" style="margin-top: 10px">
+    <h1 style="text-align: center; font-family: 'Prata', serif;"><b>ПАО "Дружба"</b></h1>
+    <h2 style="text-align: center; font-family: 'Prata', serif;">Банк дружбиков третьего потока</h2>
     <div class="col-12">
-        <div class="card" style="width: 100%; min-height: 200px ; margin: 0 auto">
+        <div class="card" style="width: 100%; min-height: 200px ; margin: 15px auto; background: #4b7bff">
             <div class="card-body">
-                <h5 class="card-title">Название карточки</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Подзаголовок карты</h6>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
-                <a href="#" class="card-link">Card link</a>
-                <a href="#" class="card-link">Another link</a>
+                <h5 class="card-title" style="font-family: 'Prata', serif;"><b>ДРУЖБА</b></h5>
+                <h6 class="card-subtitle mb-2 text-muted" style="font-family: 'Gentium Book Plus', serif;">Последняя
+                    инкассация: </h6>
+                <h3 class="card-text" style="margin-top: 60px; font-family: 'Exo 2', sans-serif;"><b>123456</b></h3>
+                <h5 class="card-text" style="font-family: 'Source Code Pro', monospace;">ФАМИЛИЯ ИМЯ</h5>
             </div>
         </div>
 
-        <div class="card" style="width: 100%; min-height: 200px ; margin: 0 auto">
+        <div style="background: #F1B151"></div>
+        <div class="card" style="width: 100%; min-height: 200px ; margin: 15px auto; background: #ff975b">
             <div class="card-body">
-                <h5 class="card-title">Название карточки</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Подзаголовок карты</h6>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
-                <a href="#" class="card-link">Card link</a>
-                <a href="#" class="card-link">Another link</a>
+                <h5 class="card-title" style="font-family: 'Prata', serif;"><b>ДРУЖБА</b></h5>
+                <h6 class="card-subtitle mb-2 text-muted" style="font-family: 'Gentium Book Plus', serif;">Последняя
+                    инкассация: </h6>
+                <h3 class="card-text" style="margin-top: 60px; font-family: 'Exo 2', sans-serif;"><b>123456</b></h3>
+                <h5 class="card-text" style="font-family: 'Source Code Pro', monospace;">ФАМИЛИЯ ИМЯ</h5>
             </div>
         </div>
 
-        <div class="card" style="width: 100%; min-height: 200px ; margin: 0 auto">
+        <div class="card" style="width: 100%; min-height: 200px ; margin: 15px auto; background: #ffe769">
             <div class="card-body">
-                <h5 class="card-title">Название карточки</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Подзаголовок карты</h6>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
-                <a href="#" class="card-link">Card link</a>
-                <a href="#" class="card-link">Another link</a>
+                <h5 class="card-title" style="font-family: 'Prata', serif;"><b>ДРУЖБА</b></h5>
+                <h6 class="card-subtitle mb-2 text-muted" style="font-family: 'Gentium Book Plus', serif;">Последняя
+                    инкассация: </h6>
+                <h3 class="card-text" style="margin-top: 60px; font-family: 'Exo 2', sans-serif;"><b>123456</b></h3>
+                <h5 class="card-text" style="font-family: 'Source Code Pro', monospace;">ФАМИЛИЯ ИМЯ</h5>
             </div>
         </div>
 
-        <div class="card" style="width: 100%; min-height: 200px ; margin: 0 auto">
+        <div class="card" style="width: 100%; min-height: 200px ; margin: 15px auto; background: #e55757">
             <div class="card-body">
-                <h5 class="card-title">Название карточки</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Подзаголовок карты</h6>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
-                <a href="#" class="card-link">Card link</a>
-                <a href="#" class="card-link">Another link</a>
+                <h5 class="card-title" style="font-family: 'Prata', serif;"><b>ДРУЖБА</b></h5>
+                <h6 class="card-subtitle mb-2 text-muted" style="font-family: 'Gentium Book Plus', serif;">Последняя
+                    инкассация: </h6>
+                <h3 class="card-text" style="margin-top: 60px; font-family: 'Exo 2', sans-serif;"><b>123456</b></h3>
+                <h5 class="card-text" style="font-family: 'Source Code Pro', monospace;">ФАМИЛИЯ ИМЯ</h5>
             </div>
         </div>
     </div>
