--- a/Statistics/templates/statistics/Stats.html
+++ b/Statistics/templates/statistics/Stats.html
@@ -35,47 +35,47 @@
     <h1 style="text-align: center; font-family: 'Prata', serif;"><b>ПАО "Дружба"</b></h1>
     <h2 style="text-align: center; font-family: 'Prata', serif;">Банк дружбиков третьего потока</h2>
     <div class="col-12">
-        <div class="card" style="width: 100%; min-height: 200px ; margin: 15px auto; background: #4b7bff">
+        {% for guild_name, guild_info in friendships.items %}
+            <h2 style="text-align: center; font-family: 'Prata', serif;">Карта цеха "{{ guild_name }}"</h2>
+        <div class="card" style="width: 100%; min-height: 200px ; margin: 15px auto; background: {{ guild_info.0 }}">
             <div class="card-body">
                 <h5 class="card-title" style="font-family: 'Prata', serif;"><b>ДРУЖБА</b></h5>
-                <h6 class="card-subtitle mb-2 text-muted" style="font-family: 'Gentium Book Plus', serif;">Последняя
-                    инкассация: </h6>
-                <h3 class="card-text" style="margin-top: 60px; font-family: 'Exo 2', sans-serif;"><b>123456</b></h3>
-                <h5 class="card-text" style="font-family: 'Source Code Pro', monospace;">ФАМИЛИЯ ИМЯ</h5>
+                <h6 class="card-subtitle mb-2 text-muted" style="font-family: 'Gentium Book Plus', serif;">Сумма актуальна на: {{ today }}</h6>
+                <h3 class="card-text" style="margin-top: 60px; font-family: 'Exo 2', sans-serif;"><b>{{ guild_info.1 }}</b></h3>
+                <h5 class="card-text" style="font-family: 'Source Code Pro', monospace;">{{ guild_info.2 }}</h5>
             </div>
         </div>
-
-        <div style="background: #F1B151"></div>
-        <div class="card" style="width: 100%; min-height: 200px ; margin: 15px auto; background: #ff975b">
-            <div class="card-body">
-                <h5 class="card-title" style="font-family: 'Prata', serif;"><b>ДРУЖБА</b></h5>
-                <h6 class="card-subtitle mb-2 text-muted" style="font-family: 'Gentium Book Plus', serif;">Последняя
-                    инкассация: </h6>
-                <h3 class="card-text" style="margin-top: 60px; font-family: 'Exo 2', sans-serif;"><b>123456</b></h3>
-                <h5 class="card-text" style="font-family: 'Source Code Pro', monospace;">ФАМИЛИЯ ИМЯ</h5>
-            </div>
-        </div>
-
-        <div class="card" style="width: 100%; min-height: 200px ; margin: 15px auto; background: #ffe769">
-            <div class="card-body">
-                <h5 class="card-title" style="font-family: 'Prata', serif;"><b>ДРУЖБА</b></h5>
-                <h6 class="card-subtitle mb-2 text-muted" style="font-family: 'Gentium Book Plus', serif;">Последняя
-                    инкассация: </h6>
-                <h3 class="card-text" style="margin-top: 60px; font-family: 'Exo 2', sans-serif;"><b>123456</b></h3>
-                <h5 class="card-text" style="font-family: 'Source Code Pro', monospace;">ФАМИЛИЯ ИМЯ</h5>
-            </div>
-        </div>
-
-        <div class="card" style="width: 100%; min-height: 200px ; margin: 15px auto; background: #e55757">
-            <div class="card-body">
-                <h5 class="card-title" style="font-family: 'Prata', serif;"><b>ДРУЖБА</b></h5>
-                <h6 class="card-subtitle mb-2 text-muted" style="font-family: 'Gentium Book Plus', serif;">Последняя
-                    инкассация: </h6>
-                <h3 class="card-text" style="margin-top: 60px; font-family: 'Exo 2', sans-serif;"><b>123456</b></h3>
-                <h5 class="card-text" style="font-family: 'Source Code Pro', monospace;">ФАМИЛИЯ ИМЯ</h5>
-            </div>
-        </div>
-    </div>
+        {% endfor %}
+{#        <div class="card" style="width: 100%; min-height: 200px ; margin: 15px auto; background: #ff975b">#}
+{#            <div class="card-body">#}
+{#                <h5 class="card-title" style="font-family: 'Prata', serif;"><b>ДРУЖБА</b></h5>#}
+{#                <h6 class="card-subtitle mb-2 text-muted" style="font-family: 'Gentium Book Plus', serif;">Последняя#}
+{#                    инкассация: </h6>#}
+{#                <h3 class="card-text" style="margin-top: 60px; font-family: 'Exo 2', sans-serif;"><b>123456</b></h3>#}
+{#                <h5 class="card-text" style="font-family: 'Source Code Pro', monospace;">ФАМИЛИЯ ИМЯ</h5>#}
+{#            </div>#}
+{#        </div>#}
+{##}
+{#        <div class="card" style="width: 100%; min-height: 200px ; margin: 15px auto; background: #ffe769">#}
+{#            <div class="card-body">#}
+{#                <h5 class="card-title" style="font-family: 'Prata', serif;"><b>ДРУЖБА</b></h5>#}
+{#                <h6 class="card-subtitle mb-2 text-muted" style="font-family: 'Gentium Book Plus', serif;">Последняя#}
+{#                    инкассация: </h6>#}
+{#                <h3 class="card-text" style="margin-top: 60px; font-family: 'Exo 2', sans-serif;"><b>123456</b></h3>#}
+{#                <h5 class="card-text" style="font-family: 'Source Code Pro', monospace;">ФАМИЛИЯ ИМЯ</h5>#}
+{#            </div>#}
+{#        </div>#}
+{##}
+{#        <div class="card" style="width: 100%; min-height: 200px ; margin: 15px auto; background: #e55757">#}
+{#            <div class="card-body">#}
+{#                <h5 class="card-title" style="font-family: 'Prata', serif;"><b>ДРУЖБА</b></h5>#}
+{#                <h6 class="card-subtitle mb-2 text-muted" style="font-family: 'Gentium Book Plus', serif;">Последняя#}
+{#                    инкассация: </h6>#}
+{#                <h3 class="card-text" style="margin-top: 60px; font-family: 'Exo 2', sans-serif;"><b>123456</b></h3>#}
+{#                <h5 class="card-text" style="font-family: 'Source Code Pro', monospace;">ФАМИЛИЯ ИМЯ</h5>#}
+{#            </div>#}
+{#        </div>#}
+{#    </div>#}
 
 
     {#    <table class="table">#}
