--- a/Statistics/templates/statistics/Stats.html
+++ b/Statistics/templates/statistics/Stats.html
@@ -40,7 +40,7 @@
         <div class="card" style="width: 100%; min-height: 200px ; margin: 15px auto; background: {{ guild_info.0 }}">
             <div class="card-body">
                 <h5 class="card-title" style="font-family: 'Prata', serif;"><b>ДРУЖБА</b></h5>
-                <h6 class="card-subtitle mb-2 text-muted" style="font-family: 'Gentium Book Plus', serif;">Сумма актуальна на: {{ today }}</h6>
+                <h6 class="card-subtitle mb-2" style="font-family: 'Gentium Book Plus', serif;">Сумма актуальна на: {{ today }}</h6>
                 <h3 class="card-text" style="margin-top: 60px; font-family: 'Exo 2', sans-serif;"><b>{{ guild_info.1 }}</b></h3>
                 <h5 class="card-text" style="font-family: 'Source Code Pro', monospace;">{{ guild_info.2 }}</h5>
             </div>
