--- a/Statistics/templates/statistics/Stats.html
+++ b/Statistics/templates/statistics/Stats.html
@@ -46,55 +46,9 @@
             </div>
         </div>
         {% endfor %}
-{#        <div class="card" style="width: 100%; min-height: 200px ; margin: 15px auto; background: #ff975b">#}
-{#            <div class="card-body">#}
-{#                <h5 class="card-title" style="font-family: 'Prata', serif;"><b>ДРУЖБА</b></h5>#}
-{#                <h6 class="card-subtitle mb-2 text-muted" style="font-family: 'Gentium Book Plus', serif;">Последняя#}
-{#                    инкассация: </h6>#}
-{#                <h3 class="card-text" style="margin-top: 60px; font-family: 'Exo 2', sans-serif;"><b>123456</b></h3>#}
-{#                <h5 class="card-text" style="font-family: 'Source Code Pro', monospace;">ФАМИЛИЯ ИМЯ</h5>#}
-{#            </div>#}
-{#        </div>#}
-{##}
-{#        <div class="card" style="width: 100%; min-height: 200px ; margin: 15px auto; background: #ffe769">#}
-{#            <div class="card-body">#}
-{#                <h5 class="card-title" style="font-family: 'Prata', serif;"><b>ДРУЖБА</b></h5>#}
-{#                <h6 class="card-subtitle mb-2 text-muted" style="font-family: 'Gentium Book Plus', serif;">Последняя#}
-{#                    инкассация: </h6>#}
-{#                <h3 class="card-text" style="margin-top: 60px; font-family: 'Exo 2', sans-serif;"><b>123456</b></h3>#}
-{#                <h5 class="card-text" style="font-family: 'Source Code Pro', monospace;">ФАМИЛИЯ ИМЯ</h5>#}
-{#            </div>#}
-{#        </div>#}
-{##}
-{#        <div class="card" style="width: 100%; min-height: 200px ; margin: 15px auto; background: #e55757">#}
-{#            <div class="card-body">#}
-{#                <h5 class="card-title" style="font-family: 'Prata', serif;"><b>ДРУЖБА</b></h5>#}
-{#                <h6 class="card-subtitle mb-2 text-muted" style="font-family: 'Gentium Book Plus', serif;">Последняя#}
-{#                    инкассация: </h6>#}
-{#                <h3 class="card-text" style="margin-top: 60px; font-family: 'Exo 2', sans-serif;"><b>123456</b></h3>#}
-{#                <h5 class="card-text" style="font-family: 'Source Code Pro', monospace;">ФАМИЛИЯ ИМЯ</h5>#}
-{#            </div>#}
-{#        </div>#}
-{#    </div>#}
-
-
-    {#    <table class="table">#}
-    {#        <thead>#}
-    {#        <tr>#}
-    {#            <th scope="col">Цеха</th>#}
-    {#            <th scope="col">Дружбики</th>#}
-    {#        </tr>#}
-    {#        </thead>#}
-    {#        <tbody>#}
-    {#        {% for guild_name, count in friendships.items %}#}
-    {#            <tr>#}
-    {#                <th scope="row">{{ guild_name }}</th>#}
-    {#                <td>{{ count }}</td>#}
-    {#            </tr>#}
-    {#        {% endfor %}#}
-    {#        </tbody>#}
-    {#    </table>#}
 </div>
+    
+<h3 style="text-align: center; margin-top: 50px;">С любовью, от Аладдина❤</h3>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
