--- a/Statistics/templates/statistics/Stats.html
+++ b/Statistics/templates/statistics/Stats.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Статистика</title>
+    {% load static %}
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@500&family=Gentium+Book+Plus&family=Prata&family=Source+Code+Pro:wght@500&display=swap"
@@ -28,33 +29,35 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body style="background: linear-gradient(to bottom, #5f7c8d 0%, #424a50 100%);">
+<body style="background: linear-gradient(to bottom, #ffffff 0%, #000000 100%);">
 
 <div class="container col-12" style="margin-top: 10px">
-    <h1 style="text-align: center; font-family: 'Prata', serif;"><b>ПАО "Дружба"</b></h1>
-    <h2 style="text-align: center; font-family: 'Prata', serif;">Банк дружбоинов третьего потока</h2>
-    <h3 style="text-align: center; font-family: 'Gentium Book Plus', serif;"><b>ВНИМАНИЕ!</b></h3>
-    <h4 style="text-align: center; font-family: 'Gentium Book Plus', serif;"><b>Поступило заявление от сотрудника 3
-        цеха(Бати), переименовать ДРУЖБИКИ в ДРУЖБОИНЫ. Данное заявление было рассмотренно и успешно принято!</b></h4>
-    <h3 style="text-align: center; font-family: 'Gentium Book Plus', serif;"><b>Напоминаем, что курс дружбоинов к дружбикам равен 100 к 1</b></h3>
+    <h1 style="text-align: center; font-family: 'Prata', serif;"><b>Компания супер-агентов "Дружба"</b></h1>
+    <h2 style="text-align: center; font-family: 'Prata', serif;">Банк артефактов третьего потока</h2>
     <div class="col-12">
         {% for guild_name, guild_info in friendships.items %}
-            <h2 style="text-align: center; font-family: 'Prata', serif;">Карта цеха "{{ guild_name }}"</h2>
-            <div class="card"
-                 style="width: 100%; min-height: 200px ; margin: 15px auto; background: {{ guild_info.0 }}">
-                <div class="card-body">
-                    <h5 class="card-title" style="font-family: 'Prata', serif;"><b>ДРУЖБА</b></h5>
-                    <h6 class="card-subtitle mb-2" style="font-family: 'Gentium Book Plus', serif;">Сумма
+            <h2 style="text-align: center; font-family: 'Prata', serif;">Карта курса "{{ guild_name }}"</h2>
+            <div class="card bg-dark text-white"
+                 style="width: 100%; min-height: 200px ; margin: 15px auto;">
+                <img src="{% static guild_info.0 %}" class="card-img" alt="..."
+                     style=" -ms-filter: blur(1px); filter: blur(1px);">
+                <div class="card-img-overlay">
+                    <h5 class="card-title" style="font-family: 'Prata', serif;text-shadow: 1.5px 1.5px 1.5px #000;">
+                        <b>ДРУЖБА</b></h5>
+                    <h6 class="card-subtitle mb-2"
+                        style="font-family: 'Gentium Book Plus', serif;text-shadow: 1.5px 1.5px 1.5px #000;">Сумма
                         актуальна на: {{ today }}</h6>
-                    <h3 class="card-text" style="margin-top: 60px; font-family: 'Exo 2', sans-serif;">
-                        <b>{{ guild_info.1 }}</b></h3>
-                    <h5 class="card-text" style="font-family: 'Source Code Pro', monospace;">{{ guild_info.2 }}</h5>
+                    <h3 class="card-text"
+                        style="margin-top: 60px; font-family: 'Exo 2', sans-serif;text-shadow: 1.5px 1.5px 1.5px #000;">
+                        <b>Артефактов: {{ guild_info.1 }}</b></h3>
+                    <h5 class="card-text"
+                        style="font-family: 'Source Code Pro', monospace;text-shadow: 1.5px 1.5px 1.5px #000;">{{ guild_info.2 }}</h5>
                 </div>
             </div>
         {% endfor %}
     </div>
 
-    <h3 style="text-align: center; margin-top: 50px;">Сколько белок ты менял?❤</h3>
+    <h3 style="text-align: center; margin-top: 50px; color: white">Стань частью супер-агентов!</h3>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
