--- a/Statistics/templates/statistics/Stats.html
+++ b/Statistics/templates/statistics/Stats.html
@@ -39,7 +39,7 @@
             <h2 style="text-align: center; font-family: 'Prata', serif;">Карта курса "{{ guild_name }}"</h2>
             <div class="card bg-dark text-white"
                  style="width: 100%; min-height: 200px ; margin: 15px auto;">
-                <img src="{% static guild_info.0 %}" class="card-img" alt="..."
+                <img src=" {{ guild_info.0 }}" class="card-img" alt="..."
                      style=" -ms-filter: blur(1px); filter: blur(1px);">
                 <div class="card-img-overlay">
                     <h5 class="card-title" style="font-family: 'Prata', serif;text-shadow: 1.5px 1.5px 1.5px #000;">
@@ -57,7 +57,7 @@
         {% endfor %}
     </div>
 
-    <h3 style="text-align: center; margin-top: 50px; color: white">Стань частью супер-агентов!</h3>
+    <h3 style="text-align: center; margin-top: 50px; color: white">Стань частью компании супер-агентов!</h3>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
