--- a/Statistics/templates/statistics/Stats.html
+++ b/Statistics/templates/statistics/Stats.html
@@ -33,7 +33,7 @@
 
 <div class="container col-12" style="margin-top: 10px">
     <h1 style="text-align: center; font-family: 'Prata', serif;"><b>Компания супер-агентов "Дружба"</b></h1>
-    <h2 style="text-align: center; font-family: 'Prata', serif;">Банк артефактов третьего потока</h2>
+    <h2 style="text-align: center; font-family: 'Prata', serif;">Банк артефактов четвертого потока</h2>
     <div class="col-12">
         {% for guild_name, guild_info in friendships.items %}
             <h2 style="text-align: center; font-family: 'Prata', serif;">Карта курса "{{ guild_name }}"</h2>
