--- a/Statistics/templates/statistics/Stats.html
+++ b/Statistics/templates/statistics/Stats.html
@@ -56,6 +56,24 @@
             </div>
         {% endfor %}
     </div>
+</div>
+
+<div class="container" style="font-family: 'Gentium Book Plus', serif;">
+    <h1>За последние 3 дня прошли следующие игры со следующими результатами:</h1>
+    <h3>ИГРА SMART-Агент(26 июля)</h3>
+    <h5>I места - 4|1 отряды - по 8 артефактов</h5>
+    <h5>II места - 3|2 отряды - по 6 артефактов</h5>
+    <h3>ИГРА Удача(27 июля)</h3>
+    <h5>I место - 4 отряд - 8 артефактов</h5>
+    <h5>II место - 3 отряд - 6 артефактов</h5>
+    <h5>III место - 2 отряд - 4 артефакта</h5>
+    <h5>IV место - 1 отряд - 2 артефакта</h5>
+    <h3>ИГРА Документы(28 июля)</h3>
+    <h5>I место - 4 отряд - 8 артефактов</h5>
+    <h5>II место - 1 отряд - 6 артефактов</h5>
+    <h5>III место - 3 отряд - 4 артефакта</h5>
+    <h5>IV место - 2 отряд - 2 артефакта</h5>
+</div>
 
     <h3 style="text-align: center; margin-top: 50px; color: white">Стань частью компании супер-агентов!</h3>
 
