--- a/Statistics/templates/statistics/Stats.html
+++ b/Statistics/templates/statistics/Stats.html
@@ -58,7 +58,8 @@
     </div>
 </div>
 
-<div class="container" style="font-family: 'Gentium Book Plus', serif;">
+<div class="container"
+     style="font-family: 'Gentium Book Plus', serif; text-align: center; margin-top: 50px; color: white">
     <h1>За последние 3 дня прошли следующие игры со следующими результатами:</h1>
     <h3>ИГРА SMART-Агент(26 июля)</h3>
     <h5>I места - 4|1 отряды - по 8 артефактов</h5>
@@ -75,10 +76,10 @@
     <h5>IV место - 2 отряд - 2 артефакта</h5>
 </div>
 
-    <h3 style="text-align: center; margin-top: 50px; color: white">Стань частью компании супер-агентов!</h3>
+<h3 style="text-align: center; margin-top: 50px; color: white">Стань частью компании супер-агентов!</h3>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-            crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
 </body>
 </html>
