--- a/Statistics/templates/statistics/Stats.html
+++ b/Statistics/templates/statistics/Stats.html
@@ -64,20 +64,20 @@
     <h1>За последние 3 дня прошли следующие игры со следующими результатами:</h1>
     <hr>
     <h3>ИГРА SMART-Агент(26 июля)</h3>
-    <h5>I места - 4|1 отряды - по 8 артефактов</h5>
-    <h5>II места - 3|2 отряды - по 6 артефактов</h5>
+    <h5>I места - 4|1 курсы - по 8 артефактов</h5>
+    <h5>II места - 3|2 курсы - по 6 артефактов</h5>
     <hr>
     <h3>ИГРА Удача(27 июля)</h3>
-    <h5>I место - 4 отряд - 8 артефактов</h5>
-    <h5>II место - 3 отряд - 6 артефактов</h5>
-    <h5>III место - 2 отряд - 4 артефакта</h5>
-    <h5>IV место - 1 отряд - 2 артефакта</h5>
+    <h5>I место - 4 курс - 8 артефактов</h5>
+    <h5>II место - 3 курс - 6 артефактов</h5>
+    <h5>III место - 2 курс - 4 артефакта</h5>
+    <h5>IV место - 1 курс - 2 артефакта</h5>
     <hr>
     <h3>ИГРА Документы(28 июля)</h3>
-    <h5>I место - 4 отряд - 8 артефактов</h5>
-    <h5>II место - 1 отряд - 6 артефактов</h5>
-    <h5>III место - 3 отряд - 4 артефакта</h5>
-    <h5>IV место - 2 отряд - 2 артефакта</h5>
+    <h5>I место - 4 курс - 8 артефактов</h5>
+    <h5>II место - 1 курс - 6 артефактов</h5>
+    <h5>III место - 3 курс - 4 артефакта</h5>
+    <h5>IV место - 2 курс - 2 артефакта</h5>
     <hr>
 </div>
 
