--- a/Statistics/templates/statistics/Stats.html
+++ b/Statistics/templates/statistics/Stats.html
@@ -64,7 +64,7 @@
     <h1>Список всех игр с результатами:</h1>
     {% for game in games %}
         <hr>
-        <h3>Игра {{ game.1 }}({{ game.0 }})</h3>
+        <h3>{{ game.1 }}({{ game.0 }})</h3>
         {% for team in game.2 %}
             <h5>{{ team.0 }} курс. Заработано артефактов: {{ team.1 }}</h5>
         {% endfor %}
