--- a/Statistics/templates/statistics/Stats.html
+++ b/Statistics/templates/statistics/Stats.html
@@ -72,7 +72,7 @@
     <hr>
 </div>
 
-<h3 style="text-align: center; margin-top: 50px; color: white">Семь футов под килем, матросы!</h3>
+<h3 style="text-align: center; margin-top: 50px; color: white">Половина потока уже прошла...</h3>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
